<resources>
    <string name="app_name">WanAndroid</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="repeat_password">确认密码</string>
    <string name="login">登录</string>
    <string name="forget_password">forgot password?</string>
    <string name="sign_up">注册</string>
    <string name="main_page">首页</string>
    <string name="knowledge">知识体系</string>
    <string name="navigtion">导航</string>
    <string name="projects">项目</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title">5.+高新技术/RecyclerView</string>
    <string name="time">2018-12-02</string>
    <string name="wan">Wan</string>
    <string name="text">让你明明白白地使用RecyclerView-snapHelper</string>
</resources>
