<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout
    android:background="#FFFFFF"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">
    <TextView
        android:layout_marginTop="80dp"
        android:textColor="#03A9F4"
        android:typeface="serif"
        android:textStyle="italic"
        android:text="@string/wan"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_width="90dp"
        android:layout_height="85dp"/>
    <android.support.design.widget.TextInputLayout
        android:theme="@style/CustomLineTheme"
        app:hintTextAppearance="@style/hintAppearance"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="60dp">
        <EditText
            android:id="@+id/edit_username"
            android:maxLines="1"
            android:maxWidth="300dp"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:theme="@style/CustomLineTheme"
        app:hintTextAppearance="@style/hintAppearance"
        android:layout_gravity="center"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="30dp"
        android:layout_width="320dp"
        android:layout_height="60dp">
        <EditText
            android:id="@+id/edit_password"
            android:maxLines="1"
            android:maxWidth="300dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/bt_login"
        android:text="@string/login"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="#03A9F4"
        android:layout_width="320dp"
        android:layout_height="40dp"/>
    <TextView
        android:id="@+id/tv_to_register"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textColor="#125F9C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
</layout>